# fastapi_tutorial

./: .gitignore  alembic.ini  pyproject.toml
core/: db.py
microblog/: models.py
migrations/: env.py
migrations/versions/: 6245552ecca8_initial_db.py  80c7d9bcf9f4_second.py
user/: models.py
